feat: thread tab searching
